Pad column to prevent shadow clipping

--- a/src/styles/components/_codebook.scss
+++ b/src/styles/components/_codebook.scss
@@ -85,5 +85,9 @@
     &-heading {
       text-transform: none;
     }
+
+    &-column {
+      padding: 3px 0;
+    }
   }
 }
